--- a/shadowrocket-rules/nodnsleak-pk.ini
+++ b/shadowrocket-rules/nodnsleak-pk.ini
@@ -33,13 +33,13 @@ localhost = 127.0.0.1
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
 # 知乎活动
-^https:\/\/pic2\.zhimg\.com\/100\/v2-d7b1f1e1c98c8d7b1fd52fddc4b58c1a_1440w\.webp url reject-200
+^https:\/\/pic2\.zhimg\.com\/100\/v2-d7b1f1e1c98c8d7b1fd52fddc4b58c1a_1440w\.webp 404
 # 腾讯视频开屏广告
-^https:\/\/api-access\.pangolin-sdk-toutiao1\.com\/api\/ad\/ url reject-200
-^https:\/\/qh-material\.taobao\.com\/dsp\/img\/ url reject-200
+^https:\/\/api-access\.pangolin-sdk-toutiao1\.com\/api\/ad\/ 404
+^https:\/\/qh-material\.taobao\.com\/dsp\/img\/ 404
 # 美柚开屏广告
-^http:\/\/(.+?)\.pglstatp-toutiao\.com\/ad\.union\.api\/ url reject
-^http:\/\/(.+?)\.pglstatp-toutiao\.com\/ url reject
+^http:\/\/(.+?)\.pglstatp-toutiao\.com\/ad\.union\.api\/ 404
+^http:\/\/(.+?)\.pglstatp-toutiao\.com\/ 404
 
 # 宝宝树
-^http:\/\/plough\.babytree\.com\/plough\.do$ url reject
+^http:\/\/plough\.babytree\.com\/plough\.do$ 404
